parslers-benchmark/src/tests/invalid/syntaxErr/function/mutualRecursionNoReturn.wacc
# function body of r2 missing return
# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int r1(int x) is
    if x == 0 
    then
      skip
    else
      print "r1: sending " ;
      println x ;
      int y = call r2(x)
    fi ;
    return 42  
  end

  int r2(int y) is
    print "r2: received " ;
    println y ;
    int z = call r1(y - 1)
  end

  int x = 0 ;
  x = call r1(8)
end
